--- a/package.json
+++ b/package.json
@@ -16,28 +16,28 @@
     "@types/koa-static": "^4.0.1",
     "@types/koa-views": "^2.0.4",
     "@types/koa__router": "^8.0.3",
-    "@vue/compiler-sfc": "^3.0.2",
+    "@vue/compiler-sfc": "^3.0.4",
     "ava": "^3.13.0",
-    "d3": "^6.2.0",
+    "d3": "^6.3.0",
     "dotenv": "^8.2.0",
     "koa": "^2.13.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.3.1",
+    "koa-views": "^7.0.0",
     "node-sass": "^5.0.0",
     "pug": "^3.0.0",
-    "rollup": "^2.33.3",
+    "rollup": "^2.34.2",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-pug": "^1.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
-    "rollup-plugin-vue": "^6.0.0-beta.11",
-    "ts-node": "^9.0.0",
+    "rollup-plugin-vue": "^6.0.0",
+    "ts-node": "^9.1.0",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2",
     "vue": "^3.0.3"
   },
   "scripts": {
-    "install": "sudo npm install --arch=x64 --platform=linux",
+    "install:linux": "sudo npm install --arch=x64 --platform=linux",
     "test": "ava",
     "watch:test": "npx ava --watch",
     "build": "rollup -c rollup.config.js",
