--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,8 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "composite": true,
     "declarationDir": "dist/types",
-    "rootDir": "..",
-    "baseUrl": ".",
-    "paths": {
-      "$/*": [
-        "../*"
-      ],
-      "#/*": [
-        "./*"
-      ],
-      "@/*": [
-        "./src/*"
-      ]
-    }
+    "baseUrl": "."
   },
   "references": [
     { "path": "../foundation" },
