--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "Astro",
+  "name": "astro",
   "version": "1.0.0",
   "description": "CosmicMind application.",
   "private": true,
+  "types": "dist/types/astro/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@koa/router": "^10.0.0",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
     "@types/d3": "^6.2.0",
     "@types/koa": "^2.11.6",
     "@types/koa-static": "^4.0.1",
@@ -50,5 +53,6 @@
   "bugs": {
     "url": "https://github.com/cosmicmind/astro/issues"
   },
-  "homepage": "https://github.com/cosmicmind/astro#readme"
+  "homepage": "https://github.com/cosmicmind/astro#readme",
+  "dependencies": {}
 }
