--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "files": [
     "dist"
   ],
+  "dependencies": {},
   "devDependencies": {
     "@koa/router": "^10.0.0",
     "@rollup/plugin-alias": "^3.1.1",
@@ -53,6 +54,5 @@
   "bugs": {
     "url": "https://github.com/cosmicmind/astro/issues"
   },
-  "homepage": "https://github.com/cosmicmind/astro#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/cosmicmind/astro#readme"
 }
