--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ava": "^3.15.0",
     "d3": "^6.3.1",
     "dotenv": "^8.2.0",
+    "keygrip": "^1.1.0",
     "koa": "^2.13.1",
     "koa-static": "^5.0.0",
     "koa-views": "^7.0.0",
