--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa": "^2.13.1",
     "koa-static": "^5.0.0",
     "koa-views": "^7.0.0",
+    "mysql": "^2.18.1",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.2",
     "pug": "^3.0.0",
