--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "keygrip": "^1.1.0",
     "koa": "^2.13.1",
+    "koa-body": "^4.2.0",
     "koa-static": "^5.0.0",
     "koa-views": "^7.0.0",
     "mysql": "^2.18.1",
