--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "CosmicMind application.",
   "private": true,
   "types": "dist/types/astro/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "dependencies": {},
   "devDependencies": {
     "@koa/router": "^10.0.0",
@@ -16,7 +19,6 @@
     "@types/koa__router": "^8.0.3",
     "@vue/compiler-sfc": "^3.0.5",
     "ava": "^3.15.0",
-    "d3": "^6.3.1",
     "dotenv": "^8.2.0",
     "keygrip": "^1.1.0",
     "koa": "^2.13.1",
