--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "test": "ava",
     "watch:test": "npx ava --watch",
     "build": "npm run clean && rollup -c",
-    "watch": "rollup -cw",
+    "watch": "npm run clean && rollup -cw",
     "server": "node dist/server/server.esm.js"
   },
   "repository": {
