--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@rollup/plugin-json": "^4.1.0",
     "@types/d3": "^6.2.0",
     "@types/koa": "^2.11.6",
+    "@types/koa__router": "^8.0.4",
     "@types/koa-static": "^4.0.1",
     "@types/koa-views": "^2.0.4",
-    "@types/koa__router": "^8.0.4",
     "@vue/compiler-sfc": "^3.0.5",
     "ava": "^3.15.0",
     "dotenv": "^8.2.0",
@@ -42,7 +42,7 @@
   },
   "scripts": {
     "clean": "rm -rf dist && rm -rf build",
-    "install": "npm install --arch=x64 --platform=linux && sudo npm rebuild node-sass && npm audit fix",
+    "install:linux": "npm install --arch=x64 --platform=linux && sudo npm rebuild node-sass && npm audit fix",
     "test": "ava",
     "watch:test": "npx ava --watch",
     "build": "npm run clean && rollup -c",
