--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "files": [
     "dist"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@koa/router": "^10.0.0",
     "@rollup/plugin-alias": "^3.1.1",
+    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
     "@types/d3": "^6.2.0",
     "@types/koa": "^2.11.6",
     "@types/koa__router": "^8.0.4",
