--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
     "koa-views": "^7.0.0",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.2",
-    "pug": "^3.0.0",
     "rollup": "^2.37.1",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-pug": "^1.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
     "rollup-plugin-vue": "^6.0.0",
@@ -43,7 +41,7 @@
   },
   "scripts": {
     "clean": "rm -rf dist && rm -rf build",
-    "install:linux": "npm install --arch=x64 --platform=linux && npm rebuild node-sass && npm audit fix",
+    "npm-install-linux": "npm install --arch=x64 --platform=linux && npm rebuild node-sass && npm audit fix",
     "test": "ava --verbose",
     "watch:test": "npx ava --watch",
     "build": "npm run clean && rollup -c",
